--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -42,6 +42,7 @@
 
 
 
+
   <readme-toc>
 
     <div id="readme" class="Box md js-code-block-container js-code-nav-container js-tagsearch-file Box--responsive"
@@ -52,8 +53,8 @@
         <div class="d-flex flex-items-center">
           <details
             data-target="readme-toc.trigger"
-            data-menu-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;trigger&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob/tree/master&quot;,&quot;user_id&quot;:null}}"
-            data-menu-hydro-click-hmac="bd7148863bbd9db4664f052bbab7073356738d9a3bbd491a690a8ffbff67444b"
+            data-menu-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;trigger&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}"
+            data-menu-hydro-click-hmac="70859b005809943241b4fad19c5bccc0cab8ee76ca98ca7694ed27e36d0b3dc3"
             class="dropdown details-reset details-overlay"
           >
             <summary
@@ -82,16 +83,16 @@
                 </div>
 
                 <div class="SelectMenu-list SelectMenu-list--borderless p-2" style="overscroll-behavior: contain;" data-filterable-for="toc-filter-field" data-filterable-type="substring">
-                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob/tree/master&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="c911c4fd45543ab3a017ab6c1e8ac4b8c511141af52e228434dd83a6df017d27" href="#architecture">Architecture</a>
-                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob/tree/master&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="c911c4fd45543ab3a017ab6c1e8ac4b8c511141af52e228434dd83a6df017d27" href="#features">Features</a>
-                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob/tree/master&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="c911c4fd45543ab3a017ab6c1e8ac4b8c511141af52e228434dd83a6df017d27" href="#download-from-maven-central">Download From Maven Central</a>
-                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob/tree/master&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="c911c4fd45543ab3a017ab6c1e8ac4b8c511141af52e228434dd83a6df017d27" href="#build-from-source">Build From Source</a>
-                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob/tree/master&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="c911c4fd45543ab3a017ab6c1e8ac4b8c511141af52e228434dd83a6df017d27" href="#quick-start">Quick Start</a>
-                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob/tree/master&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="c911c4fd45543ab3a017ab6c1e8ac4b8c511141af52e228434dd83a6df017d27" href="#user-guide">User Guide</a>
-                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 text-emphasized" style="-webkit-box-orient: vertical; padding-left: 12px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob/tree/master&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="c911c4fd45543ab3a017ab6c1e8ac4b8c511141af52e228434dd83a6df017d27" href="#example">Example</a>
-                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob/tree/master&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="c911c4fd45543ab3a017ab6c1e8ac4b8c511141af52e228434dd83a6df017d27" href="#contributing">Contributing</a>
-                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob/tree/master&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="c911c4fd45543ab3a017ab6c1e8ac4b8c511141af52e228434dd83a6df017d27" href="#communication">Communication</a>
-                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob/tree/master&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="c911c4fd45543ab3a017ab6c1e8ac4b8c511141af52e228434dd83a6df017d27" href="#todo-list">Todo List</a>
+                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#architecture">Architecture</a>
+                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#features">Features</a>
+                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#download-from-maven-central">Download From Maven Central</a>
+                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#build-from-source">Build From Source</a>
+                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#quick-start">Quick Start</a>
+                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#user-guide">User Guide</a>
+                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 text-emphasized" style="-webkit-box-orient: vertical; padding-left: 12px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#example">Example</a>
+                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#contributing">Contributing</a>
+                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#communication">Communication</a>
+                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#todo-list">Todo List</a>
                 </div>
               </div>
             </details-menu>
@@ -135,11 +136,11 @@
 │   └── disjob-registry-zookeeper             # Server注册的Zookeeper实现
 ├── disjob-reports                            # 聚合各个模块的测试覆盖率报告
 ├── disjob-samples                            # Samples项目
-│   ├── disjob-samples-common                 # 使用范例中用到的公共代码及公共配置文件
-│   ├── disjob-samples-merged-springboot      # Supervisor与Worker合并部署的范例（Spring-boot应用）
-│   ├── disjob-samples-supervisor-springboot  # Supervisor单独部署的范例（Spring-boot应用）
-│   ├── disjob-samples-worker-frameless       # Worker单独部署的范例（普通Java-main应用）
-│   └── disjob-samples-worker-springboot      # Worker单独部署的范例（Spring-boot应用）
+│   ├── disjob-samples-frameless-worker       # Worker单独部署的范例（普通Java-main应用）
+│   ├── disjob-samples-springboot-common      # Samples Spring-boot公共模块
+│   ├── disjob-samples-springboot-merged      # Supervisor与Worker合并部署的范例（Spring-boot应用）
+│   ├── disjob-samples-springboot-supervisor  # Supervisor单独部署的范例（Spring-boot应用）
+│   └── disjob-samples-springboot-worker      # Worker单独部署的范例（Spring-boot应用）
 ├── disjob-supervisor                         # Supervisor代码
 ├── disjob-test                               # 用于辅助测试
 └── disjob-worker                             # Worker代码"><pre lang="text" class="notranslate"><code>disjob                                        # 主项目
@@ -161,11 +162,11 @@
 │   └── disjob-registry-zookeeper             # Server注册的Zookeeper实现
 ├── disjob-reports                            # 聚合各个模块的测试覆盖率报告
 ├── disjob-samples                            # Samples项目
-│   ├── disjob-samples-common                 # 使用范例中用到的公共代码及公共配置文件
-│   ├── disjob-samples-merged-springboot      # Supervisor与Worker合并部署的范例（Spring-boot应用）
-│   ├── disjob-samples-supervisor-springboot  # Supervisor单独部署的范例（Spring-boot应用）
-│   ├── disjob-samples-worker-frameless       # Worker单独部署的范例（普通Java-main应用）
-│   └── disjob-samples-worker-springboot      # Worker单独部署的范例（Spring-boot应用）
+│   ├── disjob-samples-frameless-worker       # Worker单独部署的范例（普通Java-main应用）
+│   ├── disjob-samples-springboot-common      # Samples Spring-boot公共模块
+│   ├── disjob-samples-springboot-merged      # Supervisor与Worker合并部署的范例（Spring-boot应用）
+│   ├── disjob-samples-springboot-supervisor  # Supervisor单独部署的范例（Spring-boot应用）
+│   └── disjob-samples-springboot-worker      # Worker单独部署的范例（Spring-boot应用）
 ├── disjob-supervisor                         # Supervisor代码
 ├── disjob-test                               # 用于辅助测试
 └── disjob-worker                             # Worker代码
@@ -408,6 +409,7 @@
     </div>
 
   </readme-toc>
+
 
 
 
