--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/monitor/operlog/operlog.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/monitor/operlog/operlog.html
@@ -12,6 +12,9 @@
 					<div class="select-list">
 						<ul>
 							<li>
+								<label>操作IP：</label><input type="text" name="operIp"/>
+							</li>
+							<li>
 								<label>系统模块： </label><input type="text" name="title"/>
 							</li>
 							<li>
@@ -116,7 +119,7 @@
 		        },
 		        {
 		            field: 'operIp',
-		            title: '主机'
+		            title: '操作IP'
 		        },
 		        {
 		            field: 'operLocation',
