--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/system/user/user.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/system/user/user.html
@@ -13,7 +13,7 @@
 					<i class="fa fa-sitemap"></i> 组织机构
 				</div>
 				<div class="box-tools pull-right">
-				    <a type="button" class="btn btn-box-tool" href="#" onclick="dept()" title="管理部门"><i class="fa fa-edit"></i></a>
+				    <a type="button" class="btn btn-box-tool" href="javascript:void(0)" onclick="dept()" title="管理部门"><i class="fa fa-edit"></i></a>
 					<button type="button" class="btn btn-box-tool" id="btnExpand" title="展开" style="display:none;"><i class="fa fa-chevron-up"></i></button>
 					<button type="button" class="btn btn-box-tool" id="btnCollapse" title="折叠"><i class="fa fa-chevron-down"></i></button>
 					<button type="button" class="btn btn-box-tool" id="btnRefresh" title="刷新部门"><i class="fa fa-refresh"></i></button>
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="ui-layout-center">
 		<div class="container-div">
 			<div class="row">
@@ -60,7 +60,7 @@
 						</div>
 					</form>
 				</div>
-				
+
 		        <div class="btn-group-sm" id="toolbar" role="group">
 		        	<a class="btn btn-success" onclick="$.operate.addTab()" shiro:hasPermission="system:user:add">
 		                <i class="fa fa-plus"></i> 新增
@@ -78,14 +78,14 @@
 			            <i class="fa fa-download"></i> 导出
 			        </a>
 		        </div>
-		        
+
 		        <div class="col-sm-12 select-table table-striped">
 				    <table id="bootstrap-table"></table>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 	<th:block th:include="include :: footer" />
 	<th:block th:include="include :: layout-latest-js" />
 	<th:block th:include="include :: ztree-js" />
@@ -100,7 +100,7 @@
 		    if ($(this).width() < 769) {
 		        panehHidden = true;
 		    }
-		    $('body').layout({ initClosed: panehHidden, west__size: 185 });
+		    $('body').layout({ initClosed: panehHidden, west__size: 185, resizeWithWindow: false });
 	     	// 回到顶部绑定
 	    	if ($.fn.toTop !== undefined) {
 	    		var opt = {
