--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/tool/build.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/tool/build.html
@@ -30,11 +30,11 @@
                 <div class="ibox-title">
                     <h5>元素</h5>
                     <div class="ibox-tools">
-                        <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a> <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-wrench"></i> </a>
+                        <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a> <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:;"> <i class="fa fa-wrench"></i> </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="#">基本</a>
+                            <li><a href="javascript:;">基本</a>
                             </li>
-                            <li><a href="#">其他</a>
+                            <li><a href="javascript:;">其他</a>
                             </li>
                         </ul>
                         <a class="close-link"> <i class="fa fa-times"></i> </a>
