--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
@@ -38,13 +38,13 @@
       <div class="form-group">
         <label class="col-sm-3 control-label is-required">Job处理器：</label>
         <div class="col-sm-9">
-          <textarea name="jobHandler" class="form-control" placeholder="支持：处理器类名、Spring bean name、DAG表达式、源码" required></textarea>
+          <textarea rows="3" name="jobHandler" class="form-control" placeholder="支持：处理器类名、Spring bean name、DAG表达式、源码" required></textarea>
         </div>
       </div>
       <div class="form-group">
         <label class="col-sm-3 control-label">Job参数：</label>
         <div class="col-sm-9">
-          <textarea name="jobParam" class="form-control"></textarea>
+          <textarea rows="3" name="jobParam" class="form-control"></textarea>
         </div>
       </div>
       <div class="form-group">
