stop thread default no wait

--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
@@ -34,13 +34,13 @@
       <div class="form-group">
         <label class="col-sm-3 control-label is-required">Job处理器：</label>
         <div class="col-sm-9">
-          <p class="form-control-static" style="white-space:pre-line; border:1px solid #F0F0F0; border-radius:5px; background:#F0F0F0;">[(*{jobHandler})]</p>
+          <textarea rows="3" name="jobParam" class="form-control" readonly>[(*{jobHandler})]</textarea>
         </div>
       </div>
       <div class="form-group">
         <label class="col-sm-3 control-label">Job参数：</label>
         <div class="col-sm-9">
-          <p class="form-control-static" style="white-space:pre-line; border:1px solid #F0F0F0; border-radius:5px; background:#F0F0F0;">[(*{jobParam})]</p>
+          <textarea rows="3" name="jobParam" class="form-control" readonly>[(*{jobParam})]</textarea>
         </div>
       </div>
       <div class="form-group">
