--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -326,7 +326,7 @@
           <ol start="3" dir="auto">
             <li><strong>接收任务</strong></li>
           </ol>
-          <p dir="auto">Worker接收到子任务后，会提交到框架定义的线程池中执行。</p>
+          <p dir="auto">Worker接收到子任务后，会提交到框架自定义的线程池中执行。</p>
           <ol start="4" dir="auto">
             <li><strong>分布式并行执行</strong></li>
           </ol>
