--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -112,7 +112,7 @@
           </ul>
           <div class="snippet-clipboard-content notranslate position-relative overflow-auto" data-snippet-clipboard-copy-content="disjob                                        # 主项目①
 ├── disjob-admin                              # 管理后台项目②(基于Ruoyi框架二次开发)
-├── disjob-bom                                # Maven project bom module
+├── disjob-bom                                # Maven项目bom模块
 ├── disjob-common                             # 公共的工具类模块
 ├── disjob-core                               # 任务调度相关的核心类（如数据模型、枚举类、抽象层接口等）
 ├── disjob-dispatch                           # 任务派发模块
@@ -139,7 +139,7 @@
 ├── disjob-test                               # 用于辅助测试
 └── disjob-worker                             # Worker代码"><pre lang="text" class="notranslate"><code>disjob                                        # 主项目①
 ├── disjob-admin                              # 管理后台项目②(基于Ruoyi框架二次开发)
-├── disjob-bom                                # Maven project bom module
+├── disjob-bom                                # Maven项目bom模块
 ├── disjob-common                             # 公共的工具类模块
 ├── disjob-core                               # 任务调度相关的核心类（如数据模型、枚举类、抽象层接口等）
 ├── disjob-dispatch                           # 任务派发模块
