--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
@@ -96,6 +96,10 @@
           <p class="form-control-static">[( ${@disjobService.desc('RouteStrategy', job.routeStrategy)} )]</p>
         </div>
       </div>
+      <div class="form-group">
+        <label class="col-sm-3 control-label">备注：</label>
+        <div class="col-sm-9">[(*{remark})]</div>
+      </div>
     </form>
   </div>
 
