--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
@@ -10,7 +10,7 @@
       <div class="form-group">
         <label class="col-sm-3 control-label is-required">Job分组：</label>
         <div class="col-sm-9">
-          <p class="form-control-static">[(*{jobGroup})]</p>
+          <p class="form-control-static">[(*{group})]</p>
         </div>
       </div>
       <div class="form-group">
