--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/edit.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/edit.html
@@ -10,9 +10,9 @@
       <input name="jobId" th:field="*{jobId}" type="hidden" />
       <input name="version" th:field="*{version}" type="hidden" />
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required">Job分组：</label>
+        <label class="col-sm-3 control-label is-required">分组名称：</label>
         <div class="col-sm-9">
-          <input name="jobGroup" th:field="*{jobGroup}" class="form-control" type="text" readonly required />
+          <input name="group" th:field="*{group}" class="form-control" type="text" readonly required />
         </div>
       </div>
       <div class="form-group">
