--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/job.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/job.html
@@ -12,8 +12,8 @@
           <div class="select-list">
             <ul>
               <li>
-                <label>Job分组：</label>
-                <input type="text" name="jobGroup" />
+                <label>分组名称：</label>
+                <input type="text" name="group" />
               </li>
               <li>
                 <label>Job名称：</label>
@@ -80,8 +80,8 @@
           }
         },
         {
-          field: 'jobGroup',
-          title: 'Job分组'
+          field: 'group',
+          title: '分组名称'
         },
         {
           field: 'jobName',
