--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
@@ -10,7 +10,7 @@
       <div class="form-group">
         <label class="col-sm-3 control-label is-required">Job分组：</label>
         <div class="col-sm-9">
-          <input name="jobGroup" placeholder="Job所属的组" th:field="*{jobGroup}" class="form-control" type="text" autocomplete="off" required />
+          <input name="group" placeholder="分组名称" th:field="*{group}" class="form-control" type="text" autocomplete="off" required />
         </div>
       </div>
       <div class="form-group">
